--- a/src/layouts/AuthLayout/style.module.css
+++ b/src/layouts/AuthLayout/style.module.css
@@ -1,6 +1,13 @@
-root {
+.root {
     display: flex;
     height: 100%;
+}
+
+.logoTitle {
+    font-size: 20px;
+    margin: 0;
+    padding-top: 4px;
+    text-align: center;
 }
 
 .logoTop {
@@ -12,10 +19,16 @@ root {
 
 .header {
     display: flex;
+    position: absolute;
+    top: 3%;
+    left: 3%;
 }
 
 .leftSection {
     flex: 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .rightSection {
@@ -25,7 +38,6 @@ root {
     background-size: cover;
     justify-content: center;
     align-items: center;
-    display: flex;
 }
 
 .logo {
