--- a/src/components/logo/style.module.css
+++ b/src/components/logo/style.module.css
@@ -1,4 +1,4 @@
-.logo_txt {
+.logo-text {
     font-size: 30px;
     font-weight: 700;
     color: #0d6efd;
@@ -6,7 +6,7 @@
 
 .container {
     display: flex;
-   /* Otherwise the clickable area for the logo is to wide */
+    /* Otherwise the clickable area for the logo is to wide */
     width: fit-content;
     cursor: pointer;
 }
